Maps primer paso

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="longitud">Longitud:</string>
     <string name="parar_actualizaciones">Parar Actualizaciones</string>
     <string name="iniciar_actualizaciones">Iniciar Actualizaciones</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
